[package]
name = "gitaccount"
version = "1.0.1"
edition = "2024"
description = "A CLI tool to manage multiple git accounts"
license = "MIT"
repository = "https://github.com/nuskey8/gitaccount"
readme = "README.md"
keywords = ["git", "cli", "tool"]
categories = ["command-line-utilities"]

[[bin]]
name = "gitaccount"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap-cargo = "0.18.3"
colour = "2.1.0"
dialoguer = "0.12.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
